--- a/bookshelf.css
+++ b/bookshelf.css
@@ -1,7 +1,7 @@
 .bookshelf {
 	list-style: none;
 	padding: 0;
-	margin: 0 0 0 -2%;
+	margin: 0;
 }
 .bookshelf-book:nth-child(-n+1):after {
 	content: '';
@@ -10,8 +10,7 @@
 } 
 
 .bookshelf-book {
-	padding: .75em 0;
-	margin-left: 2%;
+	padding: 1.2em 0;
 
 	border-bottom: 4pt solid gray;
 }
@@ -19,11 +18,6 @@
 	content: '';
 	display: block;
 	clear: left;
-}
-@media screen and (max-width: 799px) {
-	.bookshelf-book:last-child {
-		border-bottom: none;
-	}
 }
 
 .bookshelf-book-cover {
@@ -34,11 +28,6 @@
 	
 	border: 1pt solid gray;
 	box-shadow: .12em .12em .08em .04em #999;
-}
-@media screen and (max-width: 799px) {
-	.bookshelf-book:last-child .bookshelf-book-cover {
-		margin-bottom: 0;
-	}
 }
 
 .bookshelf-book-info {
@@ -82,8 +71,7 @@
 .bookshelf-year:after { content: ' г.'; }
 .bookshelf-pages:after { content: ' стр.'; }
 
-
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1300px) { /* 2 cols */
 	.bookshelf {
 		margin-left: -2%
 	}
@@ -92,7 +80,8 @@
 		width: 48%;
 		margin-left: 2%;
 
-		height: 10.6em;
+		height: 11em;
+		padding-top: 2em;
 		overflow: hidden;
 	}
 	.bookshelf:after {
@@ -101,8 +90,29 @@
 		clear: left;
 	}
 }
-@media screen and (min-width: 1600px) {
+@media screen and (max-width: 1299px) { /* 2 cols */
+	.bookshelf {
+		padding: 0 2%;
+	}
+	.bookshelf-book:last-child {
+		border-bottom: none;
+	}
+	.bookshelf-book:last-child .bookshelf-book-cover {
+		margin-bottom: 0;
+	}
+}
+@media screen and (max-width: 1100px) {
+	.bookshelf {
+		padding: 0 1%;
+	}
+}
+@media screen and (min-width: 1600px) { /* 3 cols */
 	.bookshelf-book {
 		width: 31.333333333%;
+	}
+}
+@media screen and (max-width: 399px) {
+	.bookshelf-book-cover {
+		float: none;
 	}
 }
