--- a/css/bookshelf.css
+++ b/css/bookshelf.css
@@ -2,6 +2,7 @@
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	margin-top: -2em;
 }
 .bookshelf-book:nth-child(-n+1):after {
 	content: '';
@@ -92,7 +93,8 @@
 }
 @media screen and (max-width: 1299px) { /* 2 cols */
 	.bookshelf {
-		padding: 0 2%;
+		padding-left: 2%;
+		padding-right: 2%;
 	}
 	.bookshelf-book:last-child {
 		border-bottom: none;
@@ -103,7 +105,8 @@
 }
 @media screen and (max-width: 1100px) {
 	.bookshelf {
-		padding: 0 1%;
+		padding-left: 1%;
+		padding-right: 1%;
 	}
 }
 @media screen and (min-width: 1600px) { /* 3 cols */
