--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,11 @@ footer {
 	margin-top: 1.5em;
 	padding: 0 0 .3em 0;
 	font-size: 80%;
+
+	color: white;
+}
+footer a, footer a:visited {
+	color: white;
 }
 
 /* Page */
