Adding base path

--- a/core/views/template.hbs
+++ b/core/views/template.hbs
@@ -3,16 +3,16 @@
 <head>
 	<meta charset="utf-8" />
 	<title>{{shelf.title}} — &lt;My Bookshelf&gt;</title>
-	<link rel="stylesheet" href="/css/styles.css" type="text/css" />
-	<link rel="stylesheet" href="/css/my-bookshelf.css" type="text/css" />
-	<link rel="stylesheet" href="/css/bookshelf.css" type="text/css" />
+	<link rel="stylesheet" href="{{config.basePath}}/css/styles.css" type="text/css" />
+	<link rel="stylesheet" href="{{config.basePath}}/css/my-bookshelf.css" type="text/css" />
+	<link rel="stylesheet" href="{{config.basePath}}/css/bookshelf.css" type="text/css" />
 </head>
 	
 <body>
 	<div id="page-wrapper">
 		<div id="content-wrapper">
 			<header>
-				<div><img src="/img/logo.png" class="mb-logo" />&lt;My Bookshelf&gt;</div>
+				<div><img src="{{config.basePath}}/img/logo.png" class="mb-logo" />&lt;My Bookshelf&gt;</div>
 			</header>
 			<h1>{{#if shelf.title}}{{shelf.title}}{{else}}{{shelf.user.name}}'s Bookshelf{{/if}}</h1>
 			
