--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,16 @@ blockquote {
 }
 
 header {
-	font-size: 300%;
+	font-size: 3em;
 	background-color: white;
 	
 	border-radius: .2em;
 	padding: .9%;
+}
+@media screen and (max-width: 400px) {
+	header {
+		font-size: 2.2em;
+	}
 }
 footer {
 	margin-top: 1.5em;
