--- a/core/views/template.hbs
+++ b/core/views/template.hbs
@@ -38,6 +38,7 @@
 							Издательство <span class="bookshelf-name"><a href="{{this.publish.publisher.url}}">{{this.publish.publisher.name}}</a></span>; 
 							<span class="bookshelf-pages">{{this.publish.pages}}</span>; <span class="bookshelf-year">{{this.publish.year}}</span>
 						</p>
+						<div class="bookshelf-raiting-outer" style="width: 12px; background-image: none;"><img src="{{../config.basePath}}/img/format-{{this.my.type}}.png" height="14"></div>
 						<div class="bookshelf-raiting-outer">
 							<div class="bookshelf-raiting-inner" style="width:{{ratingToWidth this.my.rating}}%"></div>
 						</div>
